# onePageAgent

./: .gitignore  README.md
onepage_backend/: .env.example  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
onepage_backend/app/: config.py  main.py
onepage_backend/app/ai/: mcp_client.py  orchestrator.py  prompt_registry.py
onepage_backend/app/api/: deps.py  serializers.py
onepage_backend/app/core/: database.py  error_handler.py  exceptions.py  logging.py  middleware.py  minio.py  redis.py  security.py
onepage_backend/app/models/: __init__.py  ai_task.py  base.py  element.py  journal.py  material.py  material_user_state.py  page.py  upload_asset.py  user_anonymous.py  user_preference.py
onepage_backend/app/schemas/: ai_task.py  common.py  export.py  journal.py  material.py  page.py  (+3 more)
onepage_backend/docker/: Dockerfile.api  Dockerfile.worker  Dockerfile.worker-export
onepage_backend/migrations/: env.py
onepage_backend/scripts/: backfill_material_visual_metadata.py  backfill_svg_previews.py  ingest_builtin_materials.py  init_db.py  init_minio_buckets.py  seed_materials.py
onepage_backend/tests/: conftest.py  test_ai_task.py  test_dashscope_vision_client.py  test_fallback.py  test_journal_context_pipeline.py  test_journals.py  test_layout_fewshots.py  test_layout_v2.py  test_llm_json.py  test_local_ollama_vl_client.py  test_material_catalog.py  test_material_cors_urls.py  test_material_retrieval_prompt.py  test_material_state.py  test_materials.py  test_pages.py  test_semantic_material_review.py  test_unified_analysis.py  test_weather_service.py
(+143 files in other folders)
